# Jellyfin-Database-Tweaker

./: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  CMakeLists.txt  Main.cpp  MainDialog.cpp  MainDialog.h  MainDialog.ui  ProcessThread.cpp  ProcessThread.h  readme.md  resources.rc.in
rsc/: resources.qrc
